<resources>
    <string name="app_name">Tute04</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="nameHint">Name</string>
    <string name="passwordHint">Password</string>
    <string name="selectAll">Select All</string>
    <string name="add">Add</string>
    <string name="signIn">Sign In</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
